@@ -59,9 +59,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <exec.mainClass>org.breedinginsight.api.Application</exec.mainClass>
-        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version> <!-- 2.22.2 -->
-        <maven-failsafe-plugin.version>2.19.1</maven-failsafe-plugin.version>
-        <jvm.options>--enable-preview</jvm.options>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version> <!-- 2.22.2 -->
+        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
+        <jvm.options>-Xmx1024m -XX:MaxPermSize=256m --enable-preview</jvm.options>
 
         <jooq.version>3.16.3</jooq.version>
         <postgres.version>42.3.2</postgres.version>
@@ -395,6 +395,11 @@
             <artifactId>cloning</artifactId>
             <version>${cloning.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-micronaut-20</artifactId>
+            <version>3.17.5</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -571,21 +576,21 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.junit.platform</groupId>
-                            <artifactId>junit-platform-surefire-provider</artifactId>
-                            <version>1.1.0</version>
-                        </dependency>
-                        <dependency>
-                            <groupId>org.junit.jupiter</groupId>
-                            <artifactId>junit-jupiter-engine</artifactId>
-                            <version>5.7.0</version>
-                        </dependency>
-                    </dependencies>
+<!--                    <dependencies>-->
+<!--                        <dependency>-->
+<!--                            <groupId>org.junit.platform</groupId>-->
+<!--                            <artifactId>junit-platform-surefire-provider</artifactId>-->
+<!--                            <version>1.3.2</version>-->
+<!--                        </dependency>-->
+<!--                        <dependency>-->
+<!--                            <groupId>org.junit.jupiter</groupId>-->
+<!--                            <artifactId>junit-jupiter-engine</artifactId>-->
+<!--                            <version>5.9.0</version>-->
+<!--                        </dependency>-->
+<!--                    </dependencies>-->
                     <configuration>
                         <redirectTestOutputToFile>false</redirectTestOutputToFile>
-                            <argLine>${jvm.options}</argLine>
+                        <argLine>${jvm.options}</argLine>
                         <detail>true</detail>
                         <includes>
                             <include>%regex[.*]</include>
